#JC-1588 fixed Dummy plugin, added scrollbars to the plugin configuration error dialog, added collapse by double click on the dialog title, added handling exceptions during saving plugin settings in database

--- a/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
+++ b/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
@@ -606,6 +606,16 @@ div.anchor {
     line-height: 30px;
 }
 
+#pluginErrorDialog .modal-body {
+    max-height: 350px;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
+#pluginErrorDialog .modal-header {
+    cursor: move;
+}
+
 .modal-body .help-block {
     line-height: 15px !important;
 }
